calc.output
Grammar

    0 $accept: calculation $end

    1 calculation: /* empty */
    2            | calculation line

    3 line: T_NEWLINE
    4     | mixed_expression T_NEWLINE
    5     | expression T_NEWLINE
    6     | T_QUIT T_NEWLINE

    7 mixed_expression: T_FLOAT
    8                 | mixed_expression T_PLUS mixed_expression
    9                 | mixed_expression T_MINUS mixed_expression
   10                 | mixed_expression T_MULTIPLY mixed_expression
   11                 | mixed_expression T_DIVIDE mixed_expression
   12                 | T_LEFT mixed_expression T_RIGHT
   13                 | expression T_PLUS mixed_expression
   14                 | expression T_MINUS mixed_expression
   15                 | expression T_MULTIPLY mixed_expression
   16                 | expression T_DIVIDE mixed_expression
   17                 | mixed_expression T_PLUS expression
   18                 | mixed_expression T_MINUS expression
   19                 | mixed_expression T_MULTIPLY expression
   20                 | mixed_expression T_DIVIDE expression
   21                 | expression T_DIVIDE expression

   22 expression: T_INT
   23           | expression T_PLUS expression
   24           | expression T_MINUS expression
   25           | expression T_MULTIPLY expression
   26           | T_LEFT expression T_RIGHT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 22
T_FLOAT (259) 7
T_PLUS (260) 8 13 17 23
T_MINUS (261) 9 14 18 24
T_MULTIPLY (262) 10 15 19 25
T_DIVIDE (263) 11 16 20 21
T_LEFT (264) 12 26
T_RIGHT (265) 12 26
T_NEWLINE (266) 3 4 5 6
T_QUIT (267) 6


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
calculation (14)
    on left: 1 2, on right: 0 2
line (15)
    on left: 3 4 5 6, on right: 2
mixed_expression (16)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, on right: 4
    8 9 10 11 12 13 14 15 16 17 18 19 20
expression (17)
    on left: 22 23 24 25 26, on right: 5 13 14 15 16 17 18 19 20 21
    23 24 25 26


state 0

    0 $accept: . calculation $end

    $default  reduce using rule 1 (calculation)

    calculation  go to state 1


state 1

    0 $accept: calculation . $end
    2 calculation: calculation . line

    $end       shift, and go to state 2
    T_INT      shift, and go to state 3
    T_FLOAT    shift, and go to state 4
    T_LEFT     shift, and go to state 5
    T_NEWLINE  shift, and go to state 6
    T_QUIT     shift, and go to state 7

    line              go to state 8
    mixed_expression  go to state 9
    expression        go to state 10


state 2

    0 $accept: calculation $end .

    $default  accept


state 3

   22 expression: T_INT .

    $default  reduce using rule 22 (expression)


state 4

    7 mixed_expression: T_FLOAT .

    $default  reduce using rule 7 (mixed_expression)


state 5

   12 mixed_expression: T_LEFT . mixed_expression T_RIGHT
   26 expression: T_LEFT . expression T_RIGHT

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 11
    expression        go to state 12


state 6

    3 line: T_NEWLINE .

    $default  reduce using rule 3 (line)


state 7

    6 line: T_QUIT . T_NEWLINE

    T_NEWLINE  shift, and go to state 13


state 8

    2 calculation: calculation line .

    $default  reduce using rule 2 (calculation)


state 9

    4 line: mixed_expression . T_NEWLINE
    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 14
    T_MINUS     shift, and go to state 15
    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17
    T_NEWLINE   shift, and go to state 18


state 10

    5 line: expression . T_NEWLINE
   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_PLUS      shift, and go to state 19
    T_MINUS     shift, and go to state 20
    T_MULTIPLY  shift, and go to state 21
    T_DIVIDE    shift, and go to state 22
    T_NEWLINE   shift, and go to state 23


state 11

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   12                 | T_LEFT mixed_expression . T_RIGHT
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_PLUS      shift, and go to state 14
    T_MINUS     shift, and go to state 15
    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17
    T_RIGHT     shift, and go to state 24


state 12

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression
   26           | T_LEFT expression . T_RIGHT

    T_PLUS      shift, and go to state 19
    T_MINUS     shift, and go to state 20
    T_MULTIPLY  shift, and go to state 21
    T_DIVIDE    shift, and go to state 22
    T_RIGHT     shift, and go to state 25


state 13

    6 line: T_QUIT T_NEWLINE .

    $default  reduce using rule 6 (line)


state 14

    8 mixed_expression: mixed_expression T_PLUS . mixed_expression
   17                 | mixed_expression T_PLUS . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 26
    expression        go to state 27


state 15

    9 mixed_expression: mixed_expression T_MINUS . mixed_expression
   18                 | mixed_expression T_MINUS . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 28
    expression        go to state 29


state 16

   10 mixed_expression: mixed_expression T_MULTIPLY . mixed_expression
   19                 | mixed_expression T_MULTIPLY . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 30
    expression        go to state 31


state 17

   11 mixed_expression: mixed_expression T_DIVIDE . mixed_expression
   20                 | mixed_expression T_DIVIDE . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 32
    expression        go to state 33


state 18

    4 line: mixed_expression T_NEWLINE .

    $default  reduce using rule 4 (line)


state 19

   13 mixed_expression: expression T_PLUS . mixed_expression
   23 expression: expression T_PLUS . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 34
    expression        go to state 35


state 20

   14 mixed_expression: expression T_MINUS . mixed_expression
   24 expression: expression T_MINUS . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 36
    expression        go to state 37


state 21

   15 mixed_expression: expression T_MULTIPLY . mixed_expression
   25 expression: expression T_MULTIPLY . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 38
    expression        go to state 39


state 22

   16 mixed_expression: expression T_DIVIDE . mixed_expression
   21                 | expression T_DIVIDE . expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 40
    expression        go to state 41


state 23

    5 line: expression T_NEWLINE .

    $default  reduce using rule 5 (line)


state 24

   12 mixed_expression: T_LEFT mixed_expression T_RIGHT .

    $default  reduce using rule 12 (mixed_expression)


state 25

   26 expression: T_LEFT expression T_RIGHT .

    $default  reduce using rule 26 (expression)


state 26

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    8                 | mixed_expression T_PLUS mixed_expression .
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17

    $default  reduce using rule 8 (mixed_expression)


state 27

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   17                 | mixed_expression T_PLUS expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 21
    T_DIVIDE    shift, and go to state 22

    $default  reduce using rule 17 (mixed_expression)


state 28

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
    9                 | mixed_expression T_MINUS mixed_expression .
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17

    $default  reduce using rule 9 (mixed_expression)


state 29

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   18                 | mixed_expression T_MINUS expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 21
    T_DIVIDE    shift, and go to state 22

    $default  reduce using rule 18 (mixed_expression)


state 30

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   10                 | mixed_expression T_MULTIPLY mixed_expression .
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  reduce using rule 10 (mixed_expression)


state 31

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   19                 | mixed_expression T_MULTIPLY expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    $default  reduce using rule 19 (mixed_expression)


state 32

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   11                 | mixed_expression T_DIVIDE mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  reduce using rule 11 (mixed_expression)


state 33

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   20                 | mixed_expression T_DIVIDE expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    $default  reduce using rule 20 (mixed_expression)


state 34

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   13                 | expression T_PLUS mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17

    $default  reduce using rule 13 (mixed_expression)


state 35

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   23           | expression T_PLUS expression .
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 21
    T_DIVIDE    shift, and go to state 22

    $default  reduce using rule 23 (expression)


state 36

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   14                 | expression T_MINUS mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 16
    T_DIVIDE    shift, and go to state 17

    $default  reduce using rule 14 (mixed_expression)


state 37

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   24           | expression T_MINUS expression .
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 21
    T_DIVIDE    shift, and go to state 22

    $default  reduce using rule 24 (expression)


state 38

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   15                 | expression T_MULTIPLY mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  reduce using rule 15 (mixed_expression)


state 39

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression
   25           | expression T_MULTIPLY expression .

    $default  reduce using rule 25 (expression)


state 40

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   16                 | expression T_DIVIDE mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  reduce using rule 16 (mixed_expression)


state 41

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   21                 | expression T_DIVIDE expression .
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    $default  reduce using rule 21 (mixed_expression)
